--- a/app/src/main/res/layout/fragment_places_list.xml
+++ b/app/src/main/res/layout/fragment_places_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentPlacesList"
+    tools:context=".PLacesListFragment"
     android:orientation="vertical">
 
     <TextView
@@ -41,7 +41,7 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/recycle_places">
+        android:id="@+id/recycler_places">
 
     </android.support.v7.widget.RecyclerView>
 
